# pulsar

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LICENSE-APACHE-2.0  README.md  build.rs  notes  pulsar-install.sh
.cargo/: config  (+1 more)
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: bus.rs
bpf-common/: Cargo.toml  ProbeTutorial.md  README.md
bpf-common/include/: buffer.bpf.h  common.bpf.h  output.bpf.h
bpf-common/include/aarch64/: vmlinux.h
bpf-common/include/x86_64/: vmlinux.h
bpf-common/src/: bpf_fs.rs  bpf_sender.rs  builder.rs  lib.rs  program.rs  test_runner.rs  time.rs  trace_pipe.rs
bpf-common/src/feature_autodetect/: lsm.rs  mod.rs
bpf-common/src/parsing/: buffer_index.rs  data_array.rs  mod.rs  procfs.rs  string_array.rs
bpf-common/src/platform/linux-aarch64/: mod.rs
bpf-common/src/platform/linux-armeabi/: mod.rs
bpf-common/src/platform/linux-riscv64/: mod.rs
bpf-common/src/platform/linux-x86/: mod.rs
crates/bpf-common/: Cargo.toml  ProbeTutorial.md  README.md  build.rs
crates/bpf-common/include/: buffer.bpf.h  common.bpf.h  loop.bpf.h  output.bpf.h
crates/bpf-common/include/arm/: vmlinux.h
crates/bpf-common/include/riscv64/: vmlinux.h
crates/bpf-common/src/: bpf_fs.rs  bpf_sender.rs  builder.rs  bump_memlock_rlimit.rs  histogram.rs  insn.rs  lib.rs  program.rs  test_runner.rs  test_utils.rs  time.rs  trace_pipe.rs
crates/bpf-common/src/containers/: layers.rs  mod.rs  schema.rs
crates/bpf-common/src/feature_autodetect/: atomic.rs  kernel_version.rs  lsm.rs  mod.rs  test_lsm.bpf.c
crates/bpf-common/src/parsing/: buffer_index.rs  containers.rs  mod.rs  mountinfo.rs  procfs.rs
crates/bpf-common/src/platform/linux-aarch64/: mod.rs
crates/bpf-common/src/platform/linux-x86_64/: mod.rs
crates/bpf-feature-autodetect/: Cargo.toml  build.rs
crates/bpf-feature-autodetect/src/: atomic.rs  bpf_loop.rs  func.rs  insn.rs  lib.rs  lsm.rs  test_bpf_loop.bpf.c
crates/bpf-features/: Cargo.toml
crates/bpf-features-macros/: Cargo.toml
crates/bpf-features-macros/src/: lib.rs
crates/bpf-features/src/: lib.rs
crates/bpf-filtering/: Cargo.toml  build.rs
crates/bpf-filtering/src/: config.rs  filtering_example.bpf.c  initializer.rs  lib.rs  maps.rs  process_tree.rs  test_suite.rs
crates/bpf-filtering/src/ebpf/: task_reader.bpf.c  test_filtering.bpf.c
crates/ebpf-filtering/: Cargo.toml  build.rs
crates/ebpf-filtering/src/: config.rs  initializer.rs  lib.rs  maps.rs  process_tree.rs  test_suite.rs
crates/engine-api/: Cargo.toml
crates/engine-api/src/: client.rs  dto.rs  error.rs  lib.rs  server.rs
crates/modules/desktop-notifier/: Cargo.toml  README.md
crates/modules/desktop-notifier/src/: lib.rs
crates/modules/file-system-monitor/: Cargo.toml  README.md  build.rs  probe.bpf.c  probes.bpf.c
crates/modules/file-system-monitor/src/: lib.rs
crates/modules/logger/: Cargo.toml  README.md
crates/modules/logger/src/: lib.rs
crates/modules/network-monitor/: Cargo.toml  README.md  build.rs  probes.bpf.c
crates/modules/network-monitor/src/: lib.rs
crates/modules/process-monitor/: Cargo.toml  README.md  build.rs  probes.bpf.c
crates/modules/process-monitor/src/: config.rs  initializer.rs  lib.rs  maps.rs  process_tree.rs
crates/modules/process-monitor/src/filtering/: initializer.rs  maps.rs  mod.rs
crates/pulsar-core/: Cargo.toml
crates/pulsar-core/src/: bus.rs  event.rs  kernel.rs  lib.rs
crates/pulsar-core/src/pdk/: config.rs  daemon.rs  mod.rs  module.rs  module_context.rs  process_tracker.rs
crates/pulsar-core/src/platform/: linux-aarch64.rs  linux-riscv64.rs  linux-x86_64.rs
crates/validatron/: Cargo.toml  README.md
crates/validatron/derive/: Cargo.toml  README.md
crates/validatron/derive/src/: adt.rs  lib.rs  utils.rs
crates/validatron/examples/: ruleset.rs  struct.rs
crates/validatron/src/: builtins.rs  compiler.rs  engine.rs  error.rs  lib.rs  operators.rs  parser.rs  reflection.rs  ruleset.rs  trait_impl.rs  validator.rs
crates/validatron/src/reflection/: adt.rs  collection.rs  methods.rs  primitive.rs  structure.rs
engine-api/: Cargo.toml
engine-api/src/: client.rs  error.rs  server.rs
examples/pulsar-embedded-agent/: Cargo.toml  README.md  main.rs  proxy_module.rs
examples/pulsar-embedded-agent/src/: main.rs
examples/pulsar-module-as-library/: Cargo.toml  README.md  main.rs
examples/pulsar-module-as-library/src/: main.rs
modules/file-system-monitor/: Cargo.toml  README.md  probe.bpf.c
modules/file-system-monitor/src/: lib.rs
modules/logger/: Cargo.toml  README.md
modules/logger/src/: error.rs  lib.rs  rotation.rs
modules/network-monitor/: Cargo.toml  README.md  probes.bpf.c
modules/network-monitor/src/: lib.rs
modules/process-monitor/: Cargo.toml  README.md  probes.bpf.c
modules/process-monitor/src/: filtering_policy.rs  lib.rs
modules/process-monitor/src/filtering/: config.rs  initializer.rs  maps.rs  mod.rs  process_tree.rs
modules/syscall-monitor/: Cargo.toml  README.md  build.rs  on_sys_enter.bpf.c
modules/syscall-monitor/src/: lib.rs
pulsar/: Cargo.toml
pulsar-core/: Cargo.toml
pulsar-core/src/: event.rs  kernel.rs  lib.rs
pulsar-core/src/pdk/: config.rs  daemon.rs  mod.rs  module.rs  module_context.rs  process_tracker.rs
pulsar-core/src/platform/: linux-riscv64.rs
pulsar/examples/: probe.rs
pulsar/src/: lib.rs  main.rs
pulsar/src/cli/: mod.rs  pulsar.rs
pulsar/src/pulsar/: mod.rs  term_print.rs
pulsar/src/pulsard/: config.rs  daemon.rs  mod.rs  module_manager.rs
test-suite/: Cargo.toml  RAEDME.md  README.md
test-suite/src/: lib.rs  main.rs  test_suite_runner.rs
validatron/: Cargo.toml  README.md  build.rs
validatron/derive/: Cargo.toml
validatron/derive/src/: adt.rs  file_type_provider.rs  lib.rs  structure.rs
validatron/src/: dsl.lalrpop  engine.rs  error.rs  lib.rs  operators.rs  parser.rs  trait_impl.rs
xtask/: Cargo.toml  README.md
xtask/src/: cross.rs  lib.rs  main.rs  run.rs  surun.rs  tempdir.rs  test.rs  test_suite.rs  vmlinux.rs
(+299 files in other folders)
