[package]
name = "pulsar"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "pulsar"
path = "src/lib.rs"

[[bin]]
name = "pulsar-exec"
path = "src/main.rs"

[dependencies]
# Crates
bpf-common = { workspace = true }
engine-api = { workspace = true }
pulsar-core = { workspace = true }
# Modules
desktop-notifier = { workspace = true, optional = true }
file-system-monitor = { workspace = true, optional = true }
logger = { workspace = true, optional = true }
network-monitor = { workspace = true, optional = true }
process-monitor = { workspace = true, optional = true }
rules-engine = { workspace = true, optional = true }
smtp-notifier = { workspace = true, optional = true }
# External
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = [
    "full",
    # NOTE(vadorovsky): Explicitly enable default features of our internal
    # dependencies. See the note below for an explanation why is it done.
    "bpf-common/default",
    "smtp-notifier/default"
]
test-suite = [
    "bpf-common/test-suite",
    "file-system-monitor/test-suite",
    "network-monitor/test-suite",
    "process-monitor/test-suite",
    "pulsar-core/test-suite"
]

# Pulsar modules
full = ["core", "extra"]
core = ["logger", "process-monitor", "network-monitor", "file-system-monitor"]
extra = ["rules-engine", "desktop-notifier", "smtp-notifier"]

[workspace]
members = [
    "crates/modules/file-system-monitor",
    "crates/modules/process-monitor",
    "crates/modules/network-monitor",
    "crates/modules/rules-engine",
    "crates/modules/logger",
    "crates/modules/desktop-notifier",
    "crates/modules/smtp-notifier",
    "crates/pulsar-core",
    "crates/bpf-common",
    "crates/bpf-builder",
    "crates/engine-api",
    "crates/validatron",
    "crates/bpf-filtering",
    "xtask",
    "test-suite",
]

[workspace.package]
version = "0.6.0"
license = "Apache-2.0 WITH BPF probes exception under GPL-2.0"
edition = "2021"
repository = "https://github.com/Exein-io/pulsar"

[workspace.dependencies]
# NOTE(vadorovsky): We define our internal dependencies with
# `default-features = false` in order to be able to pick features from the main
# crate (`pulsar`).
#
# Without doing so, default features of internal subcrates are being pulled in
# even when pulsar is being built with:
#
# ```
# cargo build --no-default-features
# ```
#
# Which takes away the freedom of disabling default features.

# Crates
bpf-builder = { path = "crates/bpf-builder", default-features = false }
bpf-common = { path = "crates/bpf-common", default-features = false }
bpf-filtering = { path = "crates/bpf-filtering", default-features = false }
engine-api = { path = "crates/engine-api", default-features = false }
pulsar-core = { path = "crates/pulsar-core", default-features = false }
validatron = { path = "crates/validatron", default-features = false }
# Modules
desktop-notifier = { path = "crates/modules/desktop-notifier", default-features = false }
file-system-monitor = { path = "crates/modules/file-system-monitor", default-features = false }
logger = { path = "crates/modules/logger" }
network-monitor = { path = "crates/modules/network-monitor", default-features = false }
process-monitor = { path = "crates/modules/process-monitor", default-features = false }
rules-engine = { path = "crates/modules/rules-engine", default-features = false }
smtp-notifier = { path = "crates/modules/smtp-notifier", default-features = false }

# External
anyhow = "1"
aya = { git = "https://github.com/aya-rs/aya", rev = "33b2e45ad313f7468a7d11667f13d9c365e2a263", features = ["async_tokio"] }
axum = { version = "0.6.20", features = ["ws"] }
bytes = "1.3.0"
cgroups-rs = { version = "0.3.2" }
chrono = { version = "0.4.31" }
clap = { version = "4.2.4", features = ["derive"] }
comfy-table = "5.0.1"
dns-parser = "0.8.0"
env_logger = "0.10.0"
futures = "0.3.21"
futures-util = "0.3.25"
gethostname = "0.4.3"
glob = "0.3.0"
hex = "0.4.3"
hyper = "0.14.17"
hyperlocal = "0.8"
lalrpop = "0.19.9"
lalrpop-util = { version="0.19.9", features=["lexer"] }
lazy_static = "1.4"
leon = "2.0.1"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "builder"] }
libc = "0.2"
libtest-mimic =  "0.6.0"
log = "0.4"
nix = { version = "0.26.2", features = ["fs"] }
num_cpus = "1.16"
proc-macro2 = "1.0"
procfs = { version = "0.14.2", default-features = false }
quote = "1.0"
rand = { version = "0.8.5" }
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rust-ini = "0.17.0"
semver = { version = "1.0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.9.21"
signal-hook = "0.3.14"
strum = { version = "0.25", features = ["derive"] }
syn = { version = "2.0" }
sys-mount = {version = "1.5.1", default-features = false}
thiserror = "1"
toml_edit = { version = "0.15.0", features = ["easy"] }
tokio = { version = "1", features = ["full"] }
tokio-fd = "0.3.0"
tokio-tungstenite = "0.20.1"
uuid = { version = "1.4", features = ["v4"] }
validatron-derive = { path = "crates/validatron/derive" }
which = { version = "4.2.5" }
xshell = "0.2.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
