[package]
name = "pulsar"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "pulsar"
path = "src/lib.rs"

[[bin]]
name = "pulsar-exec"
path = "src/main.rs"

[dependencies]
# Crates
bpf-common = { workspace = true }
engine-api = { workspace = true }
pulsar-core = { workspace = true }
# Modules
desktop-notifier = { workspace = true, optional = true }
file-system-monitor = { workspace = true, optional = true }
logger = { workspace = true, optional = true }
network-monitor = { workspace = true, optional = true }
process-monitor = { workspace = true, optional = true }
rules-engine = { workspace = true, optional = true }
smtp-notifier = { workspace = true, optional = true }
# External
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["full"]
full = ["core", "extra"]
core = ["logger", "process-monitor", "network-monitor", "file-system-monitor"]
extra = ["rules-engine", "desktop-notifier", "smtp-notifier"]
openssl-vendored = ["smtp-notifier?/openssl-vendored"]

[workspace]
members = [
    "crates/modules/file-system-monitor",
    "crates/modules/process-monitor",
    "crates/modules/network-monitor",
    "crates/modules/rules-engine",
    "crates/modules/logger",
    "crates/modules/desktop-notifier",
    "crates/modules/smtp-notifier",
    "crates/pulsar-core",
    "crates/bpf-common",
    "crates/bpf-builder",
    "crates/engine-api",
    "crates/validatron",
    "crates/bpf-filtering",
    "xtask",
    "test-suite",
]

[workspace.package]
version = "0.7.0"
license = "Apache-2.0 WITH BPF probes exception under GPL-2.0"
edition = "2021"
repository = "https://github.com/Exein-io/pulsar"

[workspace.dependencies]
# Crates
bpf-builder = { path = "crates/bpf-builder" }
bpf-common = { path = "crates/bpf-common", features = [
    "test-utils",
    "test-suite",
] }
bpf-filtering = { path = "crates/bpf-filtering", features = ["test-suite"] }
engine-api = { path = "crates/engine-api" }
pulsar-core = { path = "crates/pulsar-core" }
validatron = { path = "crates/validatron" }
validatron-derive = { path = "crates/validatron/derive" }
# Modules
desktop-notifier = { path = "crates/modules/desktop-notifier" }
file-system-monitor = { path = "crates/modules/file-system-monitor", features = [
    "test-suite",
] }
logger = { path = "crates/modules/logger" }
network-monitor = { path = "crates/modules/network-monitor", features = [
    "test-suite",
] }
process-monitor = { path = "crates/modules/process-monitor", features = [
    "test-suite",
] }
rules-engine = { path = "crates/modules/rules-engine" }
smtp-notifier = { path = "crates/modules/smtp-notifier" }
# External
anyhow = "1.0.75"
aya = { git = "https://github.com/aya-rs/aya", rev = "33b2e45ad313f7468a7d11667f13d9c365e2a263", features = [
    "async_tokio",
] }
axum = { version = "0.6.20", features = ["ws"] }
bytes = "1.5.0"
cgroups-rs = { version = "0.3.4" }
chrono = { version = "0.4.31" }
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
dns-parser = "0.8.0"
diesel = { version = "2.1", features = ["sqlite"] }
env_logger = "0.10.1"
futures = "0.3.29"
futures-util = "0.3.29"
gethostname = "0.4.3"
glob = "0.3.1"
hex = "0.4.3"
hyper = "0.14.28"
hyperlocal = "0.8"
lalrpop = "0.20.0"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
lazy_static = "1.4"
leon = "2.0.1"
lettre = { version = "0.11.2", default-features = false, features = [
    "smtp-transport",
    "tokio1-native-tls",
    "tokio1",
    "builder",
] }
libc = "0.2.151"
libtest-mimic = "0.6.1"
log = "0.4.20"
nix = { version = "0.27.1", features = [
    "fs",
    "process",
    "time",
    "user",
    "signal",
    "net",
] }
num_cpus = "1.16"
nut = "0.1.1"
openssl = "0.10.61"
proc-macro2 = "1.0.70"
procfs = { version = "0.16.0", default-features = false }
quote = "1.0.33"
rand = { version = "0.8.5" }
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rust-ini = "0.20.0"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
signal-hook = "0.3.17"
strum = { version = "0.25", features = ["derive"] }
syn = "2.0.41"
sys-mount = { version = "2.1.0", default-features = false }
thiserror = "1.0.51"
toml_edit = { version = "0.15.0", features = ["easy"] }
tokio = { version = "1.35.1", features = ["full"] }
tokio-fd = "0.3.0"
tokio-tungstenite = "0.21.0"
uuid = { version = "1.6.1", features = ["v4"] }
which = "5.0.0"
xshell = "0.2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
