[package]
name = "pulsar"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
name = "pulsar"
path = "src/lib.rs"

[[bin]]
name = "pulsar-exec"
path = "src/main.rs"

[dependencies]
# Crates
bpf-common = { workspace = true }
engine-api = { workspace = true }
pulsar-core = { workspace = true }
# Modules
desktop-notifier = { workspace = true, optional = true }
file-system-monitor = { workspace = true, optional = true }
threat-logger = { workspace = true, optional = true }
network-monitor = { workspace = true, optional = true }
process-monitor = { workspace = true, optional = true }
rules-engine = { workspace = true, optional = true }
smtp-notifier = { workspace = true, optional = true, default-features = false }
# External
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
comfy-table = { workspace = true }
env_logger = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
nix = { workspace = true }
rust-ini = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, features = ["serde"] }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["full", "tls-openssl"]
full = ["core", "extra"]
core = [
    "threat-logger",
    "process-monitor",
    "network-monitor",
    "file-system-monitor",
]
extra = ["rules-engine", "desktop-notifier", "smtp-notifier"]
tls-openssl = ["smtp-notifier/tls-openssl"]
tls-rustls = ["smtp-notifier/tls-rustls"]
all-vendored = ["openssl-vendored", "sqlite3-vendored"]
openssl-vendored = ["smtp-notifier?/openssl-vendored"]
sqlite3-vendored = ["bpf-common/sqlite3-vendored"]

[workspace]
members = [
    "crates/modules/file-system-monitor",
    "crates/modules/process-monitor",
    "crates/modules/network-monitor",
    "crates/modules/rules-engine",
    "crates/modules/threat-logger",
    "crates/modules/desktop-notifier",
    "crates/modules/smtp-notifier",
    "crates/pulsar-core",
    "crates/bpf-common",
    "crates/bpf-builder",
    "crates/engine-api",
    "crates/validatron",
    "crates/bpf-filtering",
    "crates/bpf-features",
    "crates/bpf-feature-autodetect",
    "crates/bpf-features-macros",
    "xtask",
    "test-suite",
]

[workspace.package]
version = "0.9.0"
license = "Apache-2.0 WITH BPF probes exception under GPL-2.0"
edition = "2021"
repository = "https://github.com/exein-io/pulsar"

[workspace.dependencies]
# Crates
bpf-builder = { path = "crates/bpf-builder" }
bpf-common = { path = "crates/bpf-common", features = [
    "test-utils",
    "test-suite",
] }
bpf-features = { path = "crates/bpf-features" }
bpf-feature-autodetect = { path = "crates/bpf-feature-autodetect" }
bpf-features-macros = { path = "crates/bpf-features-macros" }
bpf-filtering = { path = "crates/bpf-filtering", features = ["test-suite"] }
engine-api = { path = "crates/engine-api" }
pulsar-core = { path = "crates/pulsar-core" }
validatron = { path = "crates/validatron" }
validatron-derive = { path = "crates/validatron/derive" }
# Modules
desktop-notifier = { path = "crates/modules/desktop-notifier" }
file-system-monitor = { path = "crates/modules/file-system-monitor", features = [
    "test-suite",
] }
threat-logger = { path = "crates/modules/threat-logger" }
network-monitor = { path = "crates/modules/network-monitor", features = [
    "test-suite",
] }
process-monitor = { path = "crates/modules/process-monitor", features = [
    "test-suite",
] }
rules-engine = { path = "crates/modules/rules-engine" }
smtp-notifier = { path = "crates/modules/smtp-notifier", default-features = false }
# External
anyhow = "1.0.75"
aya = { git = "https://github.com/aya-rs/aya", rev = "cc2da4a2a4148e6059b8dc02e8fa4bbd2026fc3a", features = [
    "async_tokio",
] }
aya-ebpf-bindings = { git = "https://github.com/aya-rs/aya", rev = "cc2da4a2a4148e6059b8dc02e8fa4bbd2026fc3a" }
aya-obj = { git = "https://github.com/aya-rs/aya", rev = "cc2da4a2a4148e6059b8dc02e8fa4bbd2026fc3a" }
axum = { version = "0.8.1", features = ["ws"] }
bytes = "1.5.0"
cgroups-rs = { version = "0.3.4" }
chrono = { version = "0.4.31" }
clap = { version = "4.4.11", features = ["derive"] }
comfy-table = "7.1.0"
dns-mock-server = "0.1.4"
dns-parser = "0.8.0"
diesel = { version = "2.1", features = ["sqlite"] }
env_logger = "0.10.1"
flate2 = "1.0"
futures = "0.3.29"
futures-util = "0.3.29"
gethostname = "0.4.3"
glob = "0.3.1"
hex = "0.4.3"
hickory-resolver = "0.24.1"
http-body-util = "0.1.2"
hyper = "1.5.1"
hyper-util = "0.1.10"
hyperlocal = "0.9.1"
indicatif = "0.17"
lalrpop = "0.20.0"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
lazy_static = "1.4"
leon = "2.0.1"
lettre = { version = "0.11.2", default-features = false, features = [
    "smtp-transport",
    "tokio1-native-tls",
    "tokio1",
    "builder",
] }
libc = "0.2.151"
libtest-mimic = "0.6.1"
libsqlite3-sys = { version = "0.27" }
log = { version = "0.4.20", features = ["std"] }
nix = { version = "0.27.1", features = [
    "fs",
    "process",
    "time",
    "user",
    "signal",
    "net",
] }
num_cpus = "1.16"
nut = "0.1.3"
openssl = "0.10.61"
proc-macro2 = "1.0.70"
procfs = { version = "0.16.0", default-features = false }
quote = "1.0.33"
rand = { version = "0.8.5" }
regex = "1.10.2"
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rust-ini = "0.20.0"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
signal-hook = "0.3.17"
strum = { version = "0.25", features = ["derive"] }
syn = "2.0.41"
sys-mount = { version = "2.1.0", default-features = false }
tar = "0.4"
thiserror = "2.0.9"
toml_edit = { version = "0.15.0", features = ["easy"] }
tokio = { version = "1.42", features = ["full"] }
tokio-fd = "0.3.0"
tokio-tungstenite = "0.26.1"
uuid = { version = "1.6.1", features = ["v4"] }
which = "5.0.0"
xshell = "0.2.5"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
