[package]
name = "bpf-common"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[features]
default = []
build = ["tempfile"]
test-utils = ["env_logger"]

[dependencies]
aya = { version = "0.11.0", features = ["async_tokio"] }
bytes = "1.1.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-fd = "0.3.0"
log = "0.4"
anyhow = "1"
nix = "0.24.0"
sys-mount = {version = "1.5.1", default-features = false}
procfs = "0.12.0"
libc = "0.2"

# Builder dependencies
tempfile = { version = "3.2", optional = true }
glob = "0.3.0"
hex = "0.4.3"
lazy_static = "1.4.0"

# Tests dependencies
env_logger = { version = "0.9.0", optional = true }
