[package]
name = "engine-api"
version = "0.1.0"
edition = "2021"

[dependencies]
pulsar-core = { path = "../pulsar-core" }
log = "0.4"
libc = "0.2"
axum = "0.4.8"
anyhow = "1.0.53"
serde = { version = "1.0.136", features = ["derive"] }
tokio = "1.15.0"
hyper = "0.14.17"
futures = "0.3.21"
hyperlocal = "0.8"
serde_json = "1.0.79"
