[package]
name = "pulsar-core"
version = "0.3.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bpf-common = { path = "../bpf-common" }
validatron = {path = "../validatron"}

serde = { version = "1.0.136", features = ["derive"] }
async-trait = "0.1.52"
tokio = { version = "1", features = ["full"] }
semver = { version = "1.0.4", features = ["serde"] }
anyhow = "1.0.53"
log = "0.4"
thiserror = "1.0.30"
nix = "0.24.0"
