[package]
name = "test-suite"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
# Internal
bpf-common = { workspace = true, features = ["test-suite"] }
bpf-filtering = { workspace = true, features = ["test-suite"] }
file-system-monitor = { workspace = true, features = ["test-suite"] }
network-monitor = { workspace = true, features = ["test-suite"] }
process-monitor = { workspace = true, features = ["test-suite"] }

# External
libtest-mimic =  { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
