[package]
name = "test-suite"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ebpf-common = { workspace = true }
ebpf-filtering = { workspace = true }
file-system-monitor = { workspace = true }
network-monitor = { workspace = true }
process-monitor = { workspace = true }
libtest-mimic =  { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
