[package]
name = "test-suite"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bpf-common = { workspace = true }
file-system-monitor = { workspace = true }
network-monitor = { workspace = true }
process-monitor = { workspace = true }
libtest-mimic =  { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
nix = { workspace = true }
