[package]
name = "validatron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.53"
log = "0.4"
thiserror = "1.0.30"
validatron-derive = {path = "derive"}