[package]
name = "validatron"
version = "0.2.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.53"
log = "0.4"
thiserror = "1.0.30"
validatron-derive = {path = "derive"}
lalrpop-util = { version="0.19.7", features=["lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19.7"
