[package]
name = "xtask"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.58"
clap = { version = "4.2.4", features = ["derive"] }
num_cpus = "1.16"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
signal-hook = "0.3.14"
uuid = { version = "1.4", features = ["v4"] }
xshell = "0.2.2"
