[package]
name = "xtask"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
num_cpus = { workspace = true }
reqwest = { workspace = true, default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
signal-hook = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
xshell = { workspace = true }
