[package]
name = "bpf-common"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
test-suite = ["test-utils"]
test-utils = [
  "which",
  "cgroups-rs",
  "rand"
]

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "41fe944a1a60279705f5ed156b25675ea302e861", features = ["async_tokio"] }
bytes = "1.3.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-fd = "0.3.0"
log = "0.4"
anyhow = "1"
nix = { version = "0.26.2", features = ["fs"] }
sys-mount = {version = "1.5.1", default-features = false}
procfs = { version = "0.14.2", default-features = false }
libc = "0.2"
glob = "0.3.0"
hex = "0.4.3"
lazy_static = "1.4.0"

# Test deps
which = { version = "4.2.5", optional = true }
cgroups-rs = { version = "0.3.2", optional = true }
rand = { version = "0.8.5", optional = true }


[build-dependencies]
bpf-builder = { path = "../bpf-builder" }
