[package]
name = "bpf-common"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
test-suite = ["test-utils"]
test-utils = ["which", "cgroups-rs", "rand"]

[dependencies]
aya = { workspace = true, features = ["async_tokio"] }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-fd = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true, features = ["fs"] }
sys-mount = { workspace = true }
procfs = { workspace = true }
libc = { workspace = true }
glob = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
diesel = { workspace = true }
rust-ini = { workspace = true }
nut = { workspace = true }

# Test deps
which = { workspace = true, optional = true }
cgroups-rs = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

validatron = { workspace = true }

[build-dependencies]
bpf-builder = { workspace = true }
