[package]
name = "bpf-features-macros"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bpf-features = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lib]
proc-macro = true
