[package]
name = "bpf-filtering"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
test-suite = ["bpf-common/test-utils", "which"]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true, features = ["fs"] }
bpf-common = { workspace = true }
pulsar-core = { workspace = true }
regex = { workspace = true }
which = { workspace = true, optional = true }
lazy_static = { workspace = true }

[build-dependencies]
bpf-builder = { workspace = true }
