[package]
name = "ebpf-filtering"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[features]
default = []
test-suite = [
  "ebpf-common/test-utils",
  "which",
  "cgroups-rs",
]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true, features = ["fs"] }
ebpf-common = { workspace = true }
pulsar-core = { workspace = true }
regex = { workspace = true }
which = { workspace = true, optional = true }
cgroups-rs = { workspace = true, optional = true }
lazy_static = { workspace = true }

[build-dependencies]
ebpf-builder = { workspace = true }
