[package]
name = "engine-api"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
pulsar-core = { workspace = true }
log = { workspace = true }
libc = { workspace = true }
axum = { workspace = true, features = ["ws"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures = { workspace = true }
hyperlocal = { workspace = true }
serde_json = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
