[package]
name = "pulsar-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
bpf-common = { path = "../bpf-common" }
validatron = { path = "../validatron" }

serde = { version = "1.0.136", features = ["derive"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
tokio = { version = "1", features = ["full"] }
semver = { version = "1.0.4", features = ["serde"] }
anyhow = "1.0.53"
log = "0.4"
thiserror = "1.0.30"
nix = "0.26.2"
