[package]
name = "pulsar-core"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
ebpf-common = { workspace = true }
validatron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml_edit = { workspace = true, features = ["easy"] }
tokio = { workspace = true, features = ["full"] }
semver = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
nix = { workspace = true }
strum = { workspace = true, features = ["derive"] }
chrono = { workspace = true, features = ["std"] }
