[package]
name = "validatron"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.53"
log = "0.4"
thiserror = "1.0.30"
validatron-derive = {path = "derive"}
lalrpop-util = { version="0.19.8", features=["lexer"] }
regex = "1"

[build-dependencies]
lalrpop = "0.19.8"
