[package]
name = "validatron"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
thiserror = { workspace = true }
validatron-derive = { workspace = true }
