[package]
name = "pulsar-embedded-agent-example"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
pulsar = { path = "../.." }
pulsar-core = { path = "../../crates/pulsar-core" }
tokio = { version = "1", features = ["full"] }
