[package]
name = "pulsar-module-as-library-example"
version.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
network-monitor = { path = "../../crates/modules/network-monitor" }
bpf-common = { path = "../../crates/bpf-common" }
tokio = { version = "1", features = ["full"] }
