[package]
name = "logger"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"

[dependencies]
pulsar-core = { path = "../../pulsar-core" }
bpf-common = { path = "../../bpf-common" }

futures = { version = "0.3.24" }
futures-util = { version = "0.3.24" }
tokio = { version = "1", features = ["full"] }
log = "0.4"
bytes = "1.1"
serde_json = "1"
thiserror = "1"