[package]
name = "network-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
bpf-common = { path = "../../bpf-common" }
tokio = { version = "1", features = ["full"] }
pulsar-core = { path = "../../pulsar-core" }
log = "0.4"
nix = "0.24.0"
dns-parser = "0.8.0"

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }

[dev-dependencies]
bpf-common = { path = "../../bpf-common", features = ["test-utils"] }
serial_test = { version = "0.6.0" }
