[package]
name = "network-monitor"
version = "0.4.0"
license = "Apache-2.0 with BPF probe under GPL-2.0"
edition = "2021"

[features]
test-suite = ["bpf-common/test-utils"]

[dependencies]
bpf-common = { path = "../../bpf-common" }
pulsar-core = { path = "../../pulsar-core" }

tokio = { version = "1", features = ["full"] }
log = "0.4"
nix = "0.24.0"
dns-parser = "0.8.0"

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }
