[package]
name = "process-monitor"
version = "0.1.0"
license = "Apache-2.0 with BPF probe under GPL-2.0"
edition = "2021"

[dependencies]
bpf-common = { path = "../../bpf-common" }
pulsar-core = { path = "../../pulsar-core" }

tokio = { version = "1", features = ["full"] }
nix = "0.24.0"
log = "0.4"
thiserror = "1"

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }

[dev-dependencies]
bpf-common = { path = "../../bpf-common", features = ["test-utils"] }
serial_test = { version = "0.6.0" }
which = "4.2.5"
