[package]
name = "process-monitor"
version = "0.3.0"
license = "Apache-2.0 with BPF probe under GPL-2.0"
edition = "2021"

[features]
test-suite = ["bpf-common/test-utils", "which"]

[dependencies]
bpf-common = { path = "../../bpf-common" }
pulsar-core = { path = "../../pulsar-core" }

tokio = { version = "1", features = ["full"] }
nix = "0.24.0"
log = "0.4"
thiserror = "1"
which = { version = "4.2.5", optional = true }
anyhow = "1.0.65"

[build-dependencies]
bpf-common = { path = "../../bpf-common", features = ["build"] }
